Fix search results z-index and slider image in responsive (#53)

--- a/src/assets/styles/04-components/slider.scss
+++ b/src/assets/styles/04-components/slider.scss
@@ -64,7 +64,7 @@
   // Photos block slider
   &.photos-slider {
     .swiper-slide {
-      @apply bg-gray-200 h-80 md:h-96 lg:h-116 xl:h-132 w-[80%] relative rounded-md overflow-hidden mx-2 md:mx-3 lg:mx-4;
+      @apply bg-gray-200 w-[80%] relative rounded-md overflow-hidden mx-2 md:mx-3 lg:mx-4;
     }
 
     // pagination
@@ -227,7 +227,7 @@
     top: 35%;
 
     &.slider-next {
-      @apply start-auto; 
+      @apply start-auto;
       left: 17%;
     }
 
@@ -235,7 +235,7 @@
       left: 17%;
       right: auto;
 
-      &.slider-next { 
+      &.slider-next {
         right: 17%;
         left: auto
       }
